fix popular section:
Change how to handle when name and desc are too long

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,7 +347,7 @@ a {
   margin-top: 55px;
   display: flex;
   gap: 30px;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
 
 .course-list__item {
@@ -383,10 +383,12 @@ a {
 }
 
 .course-list__name {
+  margin-right: 8px;
   color: var(--primary-color);
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 1.67; /* 166.667% */
+  word-break: break-all;
 }
 
 .course-list__rating__value {
